--- a/index.html
+++ b/index.html
@@ -16,53 +16,15 @@
     <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
-            <h1><span class="orange-color">Arun Biswas</span> World</h1>
-            <h3>Build Website</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem voluptatibus ab culpa obcaecati
-                quam cumque eius, sapiente voluptate earum maxime. Quo atque ipsa officia numquam voluptatem dolore
-                adipisci itaque aliquam magni, ratione quibusdam nulla tempora tempore animi voluptates voluptas laborum
-                corporis magnam in sint nesciunt culpa. Voluptate tenetur assumenda tempora.</p>
-
+            <h1><span class="color">Arun Biswas</span> World!!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
             <a class="anchor-button" target="_blank" href="#">Hire Me</a>
         </div>
-        <div class="half-width">
-            <img src="img/1.png" alt="profile">
+        <div>
+            <img src="img/1.png" alt="img">
         </div>
     </section>
-    <section class="dream flexible-container">
-        <div class="half-width">
-            <img src="img/1.png" alt="profile">
-        </div>
-        <div class="half-width">
-            <h1>Dream Big</h1>
-            <h3>Become a web developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-
-            <a class="anchor-button" target="_blank" href="#">Download Resume</a>
-
-        </div>
-    </section>
-
-    <section class="experience-area">
-        <h1>Experiences</h1>
-        <div class="flexible-container">
-            <div class="experience-item" id="full-stack">
-                <h2>Full Stack Developer</h2>
-                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
-                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
-            </div>
-            <div class="experience-item" id="baby-web">
-                <h2>Baby Web Developer</h2>
-                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
-                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
-                </p>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <p>© Peter Parker 2023, a Programming Hero initiative.</p>
-    </footer>
 
 </body>
 
